feat: set up Turborepo monorepo structure
- Installed Turborepo and created configuration
- Created apps/ and packages/ directories
- Added analytics app skeleton in apps/analytics
- Updated package.json with workspace configuration
- Added turbo scripts for running all apps
- Kept all existing code in place (no breaking changes)
- All existing commands still work as before

This is Phase 1 of the conservative migration plan.

--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "nextn",
+  "name": "gostudiom",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "npm@10.9.2",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
+    "dev:all": "turbo run dev",
+    "dev:analytics": "turbo run dev --filter=@gostudiom/analytics",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
+    "build:all": "turbo run build",
     "start": "next start",
     "lint": "next lint",
+    "lint:all": "turbo run lint",
     "typecheck": "tsc --noEmit",
+    "typecheck:all": "turbo run typecheck",
     "docker:dev": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:build": "docker-compose build",
@@ -97,6 +107,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
+    "turbo": "^2.5.5",
     "typescript": "^5"
   }
 }
