feat(analytics): initialize analytics platform on isolated branch
- Created feature/analytics-platform branch for safe development
- Set up Docker container configuration (port 9003, separate DB)
- Initialized Next.js app with TypeScript and Tailwind
- Implemented upload interface with drag-and-drop
- Created PDF parser for Airbnb earnings reports
- Created CSV parser for transaction history
- Added database schema for analytics data
- Updated package.json with analytics-specific scripts

All work isolated in apps/analytics/ directory, calendar app untouched

--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "docker:build": "docker-compose build",
     "docker:logs": "docker-compose logs -f app",
     "docker:shell": "docker-compose exec app sh",
+    "analytics:dev": "cd apps/analytics && npm run dev",
+    "analytics:docker": "docker-compose -f docker-compose.analytics.yml up",
+    "analytics:docker:build": "docker-compose -f docker-compose.analytics.yml build",
+    "analytics:docker:down": "docker-compose -f docker-compose.analytics.yml down",
+    "analytics:logs": "docker logs -f airbnb-analytics --tail 100",
     "supabase:types": "npx supabase gen types typescript --local > src/types/supabase.ts",
     "test": "jest",
     "test:watch": "jest --watch",
