--- a/apps/analytics/package.json
+++ b/apps/analytics/package.json
@@ -1,23 +1,42 @@
 {
-  "name": "@cleancalendar/analytics",
+  "name": "@gostudiom/analytics",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 9003",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 9003",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "next": "15.3.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "@supabase/supabase-js": "^2.39.3",
+    "tailwindcss": "^3.4.1",
+    "pdf-parse": "^1.1.1",
+    "papaparse": "^5.4.1",
+    "date-fns": "^3.3.1",
+    "zod": "^3.22.4",
+    "react-hook-form": "^7.49.3",
+    "@hookform/resolvers": "^3.3.4",
+    "react-dropzone": "^14.2.3",
+    "recharts": "^2.10.4",
+    "lucide-react": "^0.314.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
-    "typescript": "^5.7.3"
+    "@types/pdf-parse": "^1.1.4",
+    "@types/papaparse": "^5.3.14",
+    "typescript": "^5.7.3",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "15.3.3"
   }
 }
