--- a/apps/analytics/package.json
+++ b/apps/analytics/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "next": "15.3.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "@supabase/supabase-js": "^2.39.3",
     "tailwindcss": "^3.4.1",
     "pdf-parse": "^1.1.1",
@@ -29,8 +29,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
-    "@types/react": "^19.0.3",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/pdf-parse": "^1.1.4",
     "@types/papaparse": "^5.3.14",
     "typescript": "^5.7.3",
