feat(analytics): implement tiered pricing model with free/pro/enterprise features
- Added user tier system with feature flags and quotas
- Created historical analytics page for pro users showing multi-year trends
- Implemented tier-based access controls for CSV upload, exports, and advanced features
- Added tier selector component for testing different user experiences
- Integrated tier checks throughout dashboard with upgrade prompts
- Fixed average stay display issue (now shows N/A when data unavailable)
- Updated README with comprehensive feature documentation and tier details

Free tier includes:
- 3 PDF uploads per month
- Basic insights and dashboard
- Estimated metrics only

Pro tier (/month) includes:
- Unlimited uploads
- CSV integration for accurate metrics
- Historical analytics
- Export to PDF/Excel
- Advanced AI recommendations

Enterprise tier includes:
- All Pro features plus API access, white-label, automated monitoring

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - NEXT_PUBLIC_USE_AUTH=false
       - NEXTAUTH_URL=http://localhost:9002
       - NEXTAUTH_SECRET=development-secret-key-change-in-production
+      - GEMINI_API_KEY=AIzaSyD2xTZABp-UxH0355ZWRSW_UPhItTBgB4k
+      - GOOGLE_AI_API_KEY=AIzaSyD2xTZABp-UxH0355ZWRSW_UPhItTBgB4k
     volumes:
       - .:/app
       - /app/node_modules
