--- a/apps/analytics/package.json
+++ b/apps/analytics/package.json
@@ -10,33 +10,39 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@supabase/supabase-js": "^2.39.3",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.263.1",
     "next": "15.3.3",
+    "papaparse": "^5.4.1",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.4.54",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@supabase/supabase-js": "^2.39.3",
-    "tailwindcss": "^3.4.1",
-    "pdf-parse": "^1.1.1",
-    "papaparse": "^5.4.1",
-    "date-fns": "^3.3.1",
-    "zod": "^3.22.4",
-    "react-hook-form": "^7.49.3",
-    "@hookform/resolvers": "^3.3.4",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.49.3",
     "recharts": "^2.10.4",
-    "lucide-react": "^0.314.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.1",
+    "xlsx": "^0.18.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^22.2.0",
+    "@types/papaparse": "^5.3.14",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/pdf-parse": "^1.1.4",
-    "@types/papaparse": "^5.3.14",
-    "typescript": "^5.7.3",
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
     "eslint": "^8.56.0",
-    "eslint-config-next": "15.3.3"
+    "eslint-config-next": "15.3.3",
+    "postcss": "^8.4.33",
+    "typescript": "^5.7.3"
   }
 }
