--- a/apps/listing-analyzer/package.json
+++ b/apps/listing-analyzer/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.536.0",
     "next": "15.3.3",
+    "puppeteer-core": "^24.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.2.0"
