--- a/apps/analytics/package.json
+++ b/apps/analytics/package.json
@@ -60,6 +60,7 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "15.3.3",
+    "form-data": "^4.0.4",
     "playwright": "^1.54.2",
     "postcss": "^8.4.33",
     "typescript": "^5.7.3",
